adding more style to desktop and mobile version - adding footer - chaning button color - removing location 2

--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
                     </div>
                     <div class="collapse navbar-collapse offset">
                         <ul class="nav navbar-nav menu_nav ml-auto">
-                            <li class="nav-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="nav-item"> <a href="#"><i class="fa fa-twitter"></i></a> </li>
-                            <li class="nav-item"> <a href="#"><i class="fa fa-dribbble"></i></a> </li>
-                            <li class="nav-item"> <a href="#"><i class="fa fa-behance"></i></a> </li>
+                            <li class="nav-item"><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+                            <li class="nav-item"> <a href="#"><i class="fa fa-facebook"></i></a> </li>
                         </ul>
                     </div>
                 </div>
@@ -79,17 +77,17 @@
     <!-- End Header Area -->
 
     <!-- start banner Area -->
-    <section class="banner-area">
+    <section class="banner-area" id="banner">
         <div class="container">
             <div class="row fullscreen align-items-center justify-content-start" style="height: 650px; !important">
                 <div class="col-lg-12">
                     <div class="active-banner-slider owl-carousel">
                         <div class="row single-slide">
-                            <div class="col-lg-5">
-                                <div class="banner-content">
-                                    <h1>Convenient 20L Water Cans</h1>
+                            <div class="col-lg-5" id="banner-text">
+                                <div class="banner-content" >
+                                    <h1>Complete Water Storage Solutions</h1>
                                     <p>
-                                        Enjoy pure, hassle-free hydration with our 20-liter water cans for any occasion.
+                                        From PET Preforms to Dispensers – Everything You Need for Water Cans
                                     </p>
                                     <div class="add-bag d-flex align-items-center">
                                         <a class="add-btn" href="contact.html">Contact Us</a>
@@ -109,14 +107,6 @@
         <!-- single product slide -->
         <div class="single-product-slider">
             <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6 text-center">
-                        <div class="section-title">
-                            <h1>Complete Water Storage Solutions</h1>
-                            <p>From PET Preforms to Dispensers – Everything You Need for Water Cans</p>
-                        </div>
-                    </div>
-                </div>
                 <div class="row">
                     <!-- single product -->
                     <div class="col-lg-3 col-md-6">
@@ -615,8 +605,7 @@
         </center>
         <div class="container">
             <div class="mapbox">
-     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.3723890046813!2d77.49746192519713!3d13.011941713992272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3cf3dc15205b%3A0x2b23d62249a79806!2sSTAR%20PLAST!5e0!3m2!1sen!2sin!4v1731228346903!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.3723890046813!2d77.49746192519713!3d13.011941713992272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3d00114ab043%3A0xf429e864311328a5!2sSTAR%20PLAST%20(Unit%202)!5e0!3m2!1sen!2sin!4v1731228477132!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.3723890046813!2d77.49746192519713!3d13.011941713992272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3d00114ab043%3A0xf429e864311328a5!2sSTAR%20PLAST%20(Unit%202)!5e0!3m2!1sen!2sin!4v1731228477132!5m2!1sen!2sin" width="80%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             <div class="row">
                 <div class="col-lg-3">
                     <div class="contact_info">
@@ -684,46 +673,22 @@
             <div class="row">
                 <div class="col-lg-4  col-md-6 col-sm-6 footer-row">
                     <div class="single-footer-widget">
-                        <h6>Newsletter</h6>
-                        <p>Stay update with our latest</p>
-                        <div class="" id="mc_embed_signup">
-
-                            <form target="_blank" novalidate="true"
-                                action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                method="get" class="form-inline">
-
-                                <div class="d-flex flex-row">
-
-                                    <input class="form-control" name="EMAIL" placeholder="Enter Email"
-                                        onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-                                        required="" type="email">
-
-
-                                    <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right"
-                                            aria-hidden="true"></i></button>
-                                    <div style="position: absolute; left: -5000px;">
-                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
-                                            type="text">
-                                    </div>
-
-                                    <!-- <div class="col-lg-4 col-md-4">
-                                                                        <button class="bb-btn btn"><span class="lnr lnr-arrow-right"></span></button>
-                                                                        </div>  -->
-                                </div>
-                                <div class="info"></div>
-                            </form>
-                        </div>
+                        <h6>Contact Details</h6>
+                            <p>
+                                Industrial Estate, 8th Main Rd,<br>
+                                2nd Stage, Kalika Nagar, Peenya, <br>
+                                Bengaluru - 560058
+                            </p>
+                            <p> +91 9535 255 655 </p>
+                            <p>starplast.co.in@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 footer-row">
                     <div class="single-footer-widget">
                         <h6>Follow Us</h6>
-                        <p>Let us be social</p>
                         <div class="footer-social d-flex align-items-center">
                             <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
+                            <a href="#"><i class="fa fa-whatsapp"></i></a>
                         </div>
                     </div>
                 </div>
