Changes: - color and text of button - remove subject from form - change enter msg to comments in footer

--- a/index.html
+++ b/index.html
@@ -605,21 +605,16 @@ CSS
                                         placeholder="Enter email address" onfocus="this.placeholder = ''"
                                         onblur="this.placeholder = 'Enter email address'">
                                 </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="subject" name="subject"
-                                        placeholder="Enter Subject" onfocus="this.placeholder = ''"
-                                        onblur="this.placeholder = 'Enter Subject'">
-                                </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <textarea class="form-control" name="message" id="message" rows="1"
-                                        placeholder="Enter Message" onfocus="this.placeholder = ''"
+                                        placeholder="Comments" onfocus="this.placeholder = ''"
                                         onblur="this.placeholder = 'Enter Message'"></textarea>
                                 </div>
                             </div>
                             <div class="col-md-12 text-right">
-                                <button type="submit" value="submit" class="primary-btn" style="background:#0aadf3">Send
+                                <button type="submit" value="submit" class="primary-btn" style="color:#000">Send
                                     Message</button>
                             </div>
                         </form>
