Added the URLs for the whatsapp and insta - add SEO

--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
         <!-- meta character set -->
         <meta charset="UTF-8">
         <!-- Site Title -->
-        <title>Star Plast</title>
+        <title>StarPlast - PET Preforms, Water Storage Solutions & Dispensers in Bangalore</title>
+        <meta name="keywords" content="PET preforms manufacturer Bangalore, 18-liter PET preform bottle, 20-liter PET preform bottle, water storage solutions Bangalore, plastic water jars manufacturer Bangalore, BT caps for water cans, dispenser rings, cleaning brushes, taps, bibcocks, wholesale PET bottles Bangalore" />
+        <meta name="description" content="StarPlast manufactures high-quality PET preforms, water dispensers, 20-liter PET bottles, and accessories. Serving businesses in Bangalore with reliable water storage solutions.">
+        <meta property="og:title" content="StarPlast - PET Preforms & Water Storage Solutions in Bangalore" />
+        <meta property="og:description" content="StarPlast offers high-quality PET preforms, water dispensers, 20-liter PET bottles, and accessories, serving businesses in Bangalore with reliable water storage solutions." />
+        <meta property="og:image" content="URL_to_image.jpg" />
+        <meta property="og:url" content="https://www.starplast.co.in" />
+        <meta property="og:type" content="website" />
+        <link rel="canonical" href="https://www.starplast.co.in" />
+
         <!--
 CSS
 ============================================= -->
@@ -66,8 +75,8 @@ CSS
                         </div>
                         <div class="collapse navbar-collapse offset">
                             <ul class="nav navbar-nav menu_nav ml-auto">
-                                <li class="nav-item"><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-                                <li class="nav-item"> <a href="#"><i class="fa fa-facebook"></i></a> </li>
+                                <li class="nav-item"><a href="https://wa.me/919535255655"><i class="fa fa-whatsapp"></i></a></li>
+                                <li class="nav-item"> <a href="https://www.facebook.com/starplastindia/"><i class="fa fa-facebook"></i></a> </li>
                             </ul>
                         </div>
                     </div>
@@ -384,6 +393,7 @@ CSS
                                 <div class="product-details">
                                     <h6>BT Caps
                                     </h6>
+                                    <p>High-quality aluminum screw caps for wine and spirits bottles, offering reliable sealing and re-closable convenience.</p>
                                     <div class="prd-bottom">
 
                                         <a href="" class="social-info">
@@ -412,6 +422,7 @@ CSS
                                 <img class="img-fluid" src="img/product/dolphine-dispancer.png" alt="">
                                 <div class="product-details">
                                     <h6>Kent Type Tap </h6>
+                                    <p>Durable, food-grade plastic tap for domestic RO water purifiers, ensuring safe and efficient water dispensing.</p>
                                     <div class="prd-bottom">
 
                                         <a href="" class="social-info">
@@ -439,8 +450,10 @@ CSS
                             <div class="single-product">
                                 <img class="img-fluid" src="img/product/kent-tap.png" alt="">
                                 <div class="product-details">
-                                    <h6>addidas New Hammer sole
-                                        for Sports person</h6>
+                                    <h6>Bibcock Water Tap
+                                        </h6>
+                                    <p>Outdoor faucet with a downward-bent nozzle, ideal for garden hoses and irrigation, made from corrosion-resistant brass.
+</p>
                                     <div class="prd-bottom">
 
                                         <a href="" class="social-info">
@@ -646,8 +659,8 @@ CSS
                         <div class="single-footer-widget">
                             <h6>Follow Us</h6>
                             <div class="footer-social d-flex align-items-center">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-whatsapp"></i></a>
+                                <a href="https://www.facebook.com/starplastindia/"><i class="fa fa-facebook"></i></a>
+                                <a href="https://wa.me/919535255655"><i class="fa fa-whatsapp"></i></a>
                             </div>
                         </div>
                     </div>
