chages: - quick fix contant

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ CSS
                                             From PET Preforms to Dispensers – Everything You Need for Water Cans
                                         </p>
                                         <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href="contact.html">Contact Us</a>
+                                            <a class="add-btn" href="#contact-us">Contact Us</a>
                                         </div>
                                     </div>
                                 </div>
@@ -446,36 +446,6 @@ CSS
                             </div>
                         </div>
                         <!-- single product -->
-                        <div class="col-lg-3 col-md-6">
-                            <div class="single-product">
-                                <img class="img-fluid" src="img/product/kent-tap.png" alt="">
-                                <div class="product-details">
-                                    <h6>Bibcock Water Tap
-                                        </h6>
-                                    <p>Outdoor faucet with a downward-bent nozzle, ideal for garden hoses and irrigation, made from corrosion-resistant brass.
-</p>
-                                    <div class="prd-bottom">
-
-                                        <a href="" class="social-info">
-                                            <span class="ti-bag"></span>
-                                            <p class="hover-text">add to bag</p>
-                                        </a>
-                                        <a href="" class="social-info">
-                                            <span class="lnr lnr-heart"></span>
-                                            <p class="hover-text">Wishlist</p>
-                                        </a>
-                                        <a href="" class="social-info">
-                                            <span class="lnr lnr-sync"></span>
-                                            <p class="hover-text">compare</p>
-                                        </a>
-                                        <a href="" class="social-info">
-                                            <span class="lnr lnr-move"></span>
-                                            <p class="hover-text">view more</p>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
         </section>
         <!-- end product Area -->
@@ -533,7 +503,7 @@ CSS
 
                                 <br>
                                 <br>
-                                ✔ PET Preforms – 18-liter & 20-liter variants (630g, 660g, 700g)
+                                ✔ PET Preforms – 20-liter variants (600g, 630g, 660g, 700g)
                                 <br>
                                 ✔ 20 & 18-Liter PET Bottles – Designed for durability and secure water storage
                                 <br>
@@ -543,7 +513,7 @@ CSS
                                 <br>
                                 ✔ BT Caps & Dispenser Rings – Secure and leak-proof solutions
                                 <br>
-                                ✔ Cleaning Brushes, Taps & Bibcocks – Essential accessories for hygiene and convenience
+                                ✔ Cleaning Brushes, Taps – Essential accessories for hygiene and convenience
                             </p><br>
                         </div>
                     </div>
