Changes: - adding testimonials - chaning the content for the testimonials

--- a/index.html
+++ b/index.html
@@ -460,20 +460,20 @@ CSS
             <div class="wrap-testimonials">
                 <div class="testimonials">
                     <div class="testimonial-img-wrapper"">
-                        <img src=" img/product/review-1.png" alt="">
+                        <img src=" img/product/wholesale-purchaser.jpeg" alt="">
                     </div>
                     <div class="testimonial-text">
                         <p>As a water business owner, I need dependable products. Their manufacturing quality ensures no leaks or breakages, keeping my customers happy.</p>
-                        <h3>John Doe</h3>
+                        <h3>Sunil Kumar</h3>
                     </div>
                 </div>
                 <div class="testimonials">
                     <div class="testimonial-img-wrapper"">
-                        <img src=" img/product/review-1.png" alt="">
+                        <img src=" img/product/Customer-2.jpeg" alt="">
                     </div>
                     <div class="testimonial-text">
                         <p>Great supplier! The 20-liter PET bottles are strong, and the lifting handles are well-designed. Our customers love the convenience!</p>
-                        <h3>John Doe</h3>
+                        <h3>Darpan Bafna</h3>
                     </div>
                 </div>
                 <div class="testimonials">
@@ -481,7 +481,7 @@ CSS
                         <img src=" img/product/review-1.png" alt="">
                     </div>
                     <div class="testimonial-text">
-                        <p>Reliable manufacturing and timely delivery! Their PET preforms and RO tubes have helped us maintain quality and efficiency in our water packaging unit.</p>
+                        <p>Reliable manufacturing and timely delivery! Their PET preforms have helped us maintain quality and efficiency in our water packaging unit.</p>
                         <h3>John Doe</h3>
                     </div>
                 </div>
