Changes: - about us content added - one product added

--- a/index.html
+++ b/index.html
@@ -446,6 +446,34 @@ CSS
                             </div>
                         </div>
                         <!-- single product -->
+                        <div class="col-lg-3 col-md-6">
+                            <div class="single-product">
+                                <img class="img-fluid" src="img/product/18-eliter-pat-paper-bottl.png" alt="">
+                                <div class="product-details">
+                                    <h6>RO Plastic Nipple</h6>
+                                    <p>High-quality RO plastic nipple designed for secure and reliable connections in water filtration systems, ensuring long-lasting performance. </p>
+                                    <div class="prd-bottom">
+
+                                        <a href="" class="social-info">
+                                            <span class="ti-bag"></span>
+                                            <p class="hover-text">add to bag</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-heart"></span>
+                                            <p class="hover-text">Wishlist</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-sync"></span>
+                                            <p class="hover-text">compare</p>
+                                        </a>
+                                        <a href="" class="social-info">
+                                            <span class="lnr lnr-move"></span>
+                                            <p class="hover-text">view more</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
         </section>
         <!-- end product Area -->
@@ -503,18 +531,17 @@ CSS
 
                                 <br>
                                 <br>
-                                ✔ PET Preforms – 20-liter variants (600g, 630g, 660g, 700g)
+✔ PET Preforms – 20L (55mm neck) in 600g, 630g, 660g, 700g; 10L (55mm neck) in 350g; 20L (120mm neck) in 490g; 10L (120mm neck) in 350g; 8L (120mm neck dispenser preform) in 350g.
                                 <br>
-                                ✔ 20 & 18-Liter PET Bottles – Designed for durability and secure water storage
+✔ PET Bottles – 20L (55mm neck); 18L (55mm neck with handle); 10L (55mm neck); 20L (120mm neck); 10L (120mm neck).
                                 <br>
-                                ✔ 120mm Neck Jars (20 Liters) – Strong & reliable for bulk water storage
+✔ Dispensers – 120mm neck variants for efficient water dispensing.
                                 <br>
-                                ✔ Dispensers – High-quality solutions for efficient water dispensing
+✔ Accessories – Taps, BT Caps, Dispenser Rings, Cleaning Brushes, and Lifting Handles.
                                 <br>
-                                ✔ BT Caps & Dispenser Rings – Secure and leak-proof solutions
+✔ RO Tubes – Available in 1/4 inch, 3/8 inch, and 1/2 inch sizes.
                                 <br>
-                                ✔ Cleaning Brushes, Taps – Essential accessories for hygiene and convenience
-                            </p><br>
+✔ RO Plastic Nipples – Durable and reliable plastic nipples for RO water purifiers.                            </p><br>
                         </div>
                     </div>
                     <div class="about-section-div">
