Urgent : Image updated on newlly added product

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ CSS
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/18-eliter-pat-paper-bottl.png" alt="">
+                                <img class="img-fluid" src="img/product/nipple.png" alt="">
                                 <div class="product-details">
                                     <h6>RO Plastic Nipple</h6>
                                     <p>High-quality RO plastic nipple designed for secure and reliable connections in water filtration systems, ensuring long-lasting performance. </p>
