--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
         <meta property="og:url" content="https://www.starplast.co.in" />
         <meta property="og:type" content="website" />
         <link rel="canonical" href="https://www.starplast.co.in" />
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XSLG07Y5P9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-XSLG07Y5P9');
+</script>
         <!--
+
 CSS
 ============================================= -->
         <link rel="stylesheet" href="css/linearicons.css">
