--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@ CSS
     </head>
 
     <body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XSLG07Y5P9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-XSLG07Y5P9');
+</script>
         <section class="wp-icon-section">
             <div class="wp-icon">
                 <a href="https://wa.me/919535255655" target="_blank">
