Changing the Testimonial acroding to the need

--- a/index.html
+++ b/index.html
@@ -508,7 +508,9 @@ CSS
                         <img src=" img/product/wholesale-purchaser.jpeg" alt="">
                     </div>
                     <div class="testimonial-text">
-                        <p>As a water business owner, I need dependable products. Their manufacturing quality ensures no leaks or breakages, keeping my customers happy.</p>
+                        <p>
+                             I need dependable products. Their PET preform bottles provide a strong foundation for high-quality plastic water bottles. The manufacturing quality ensures no leaks or breakages.
+                        </p>
                         <h3>Sunil Kumar</h3>
                     </div>
                 </div>
@@ -517,7 +519,7 @@ CSS
                         <img src=" img/product/Customer-2.jpeg" alt="">
                     </div>
                     <div class="testimonial-text">
-                        <p>Great supplier! The 20-liter PET bottles are strong, and the lifting handles are well-designed. Our customers love the convenience!</p>
+                        <p>Great supplier! The quality of their RO pipes, RP nipples, and RO taps is excellent—perfect for our filtration systems. Our customers appreciate the reliability and convenience!</p>
                         <h3>Darpan Bafna</h3>
                     </div>
                 </div>
