Change the image

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ CSS
                         <!-- single product -->
                         <div class="col-lg-3 col-md-6">
                             <div class="single-product">
-                                <img class="img-fluid" src="img/product/120-mm-jar.png" alt="">
+                                <img class="img-fluid" src="img/product/Water dispance.png" alt="">
                                 <div class="product-details">
                                     <h6>
                                         PET Blue 20 LTR Jar 120 mm Neck
