Adding instagram fav icon and link Visible Product Photo

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ CSS
                         <div class="collapse navbar-collapse offset">
                             <ul class="nav navbar-nav menu_nav ml-auto">
                                 <li class="nav-item"><a href="https://wa.me/919535255655"><i class="fa fa-whatsapp"></i></a></li>
+                                <li class="nav-item"><a href="https://www.instagram.com/starplast.co.in/"><i class="fa fa-instagram"></i></a></li>
                                 <li class="nav-item"> <a href="https://www.facebook.com/starplastindia/"><i class="fa fa-facebook"></i></a> </li>
                             </ul>
                         </div>
@@ -519,7 +520,7 @@ CSS
                         <img src=" img/product/Customer-2.jpeg" alt="">
                     </div>
                     <div class="testimonial-text">
-                        <p>Great supplier! The quality of their RO pipes, RP nipples, and RO taps is excellent—perfect for our filtration systems. Our customers appreciate the reliability and convenience!</p>
+                        <p>Great supplier! The quality of their RO pipes, RO nipples, and RO taps is excellent—perfect for our filtration systems. Our customers appreciate the reliability and convenience!</p>
                         <h3>Darpan Bafna</h3>
                     </div>
                 </div>
@@ -676,6 +677,7 @@ CSS
                             <h6>Follow Us</h6>
                             <div class="footer-social d-flex align-items-center">
                                 <a href="https://www.facebook.com/starplastindia/"><i class="fa fa-facebook"></i></a>
+                                <li class="nav-item"><a href="https://www.instagram.com/starplast.co.in/"><i class="fa fa-instagram"></i></a></li>
                                 <a href="https://wa.me/919535255655"><i class="fa fa-whatsapp"></i></a>
                             </div>
                         </div>
